<resources>
    <string name="app_name">CursoAvanzado</string>

    <string name="cargando">Cargando...</string>
    <string name="Versionapp">Version:</string>
    <string name="Descripciondecontenido">Logo de la app</string>
    <string name="Descripciondecontenidofondo">Imagenfondo</string>
    <string name="Preparando">Preparando aplicacion</string>
    <string name="Espera">Un momento porfavor</string>
    <string name="Usuario">Usuario:</string>
    <string name="Password">Password:</string>
    <string name="Usuarioingresado">Ingrese Usuario</string>
    <string name="Passwordingresado">Ingrese Password</string>
    <string name="Boton">Ingresar</string>
    <string name="faltausuario">Ingrese Usuario</string>
    <string name="faltapassword">Ingrese Password</string>
    <string name="Accesocorrecto">Acceso Correcto</string>
    <string name="Accesoincorrecto">Usuario o contraseña Incorrecto</string>
    <string name="logout">Log Out</string>
    <string name="acercade">Acerca de la APP</string>
    <string name="nombreappdialogo">Curzo Avanzado Android</string>
    <string name="desarrollador">By: Ing.Jose Eduardo Trevizo Pizano</string>
    <string name="versionappdialogo">Version:</string>
    <string name="Empresa">Control PI</string>
    <string name="siguemefb">Sigueme en Facebook: \https://www.facebook.com/edwardo.trevizopizano/</string>
    <string name="llamar">Llamar al Desarrollador</string>
    <string name="conocederPermisos">Conceder Permisos</string>
    <string name="alertapermisos">Necesita conceder permisos</string>
    <string name="leerqr">Leer Codigo QR</string>
    <string name="codigoescaneado">Codigo QR escaneado:</string>
    <string name="nombre">Nombre</string>
    <string name="contraseña">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="cualquiera">Cualquiera</string>
    <string name="admi">Administrador</string>
    <string name="predeterminado">Predeterminado</string>
    <string name="adduser">Agregar Usuario</string>
    <string name="userapp">Usuaros de la APP</string>
    <string name="eduardo">Eduardo</string>
    <string name="correolist">Edwardo_tp@hotmail.com</string>
    <string name="id">ID:</string>
    <string name="rol">Usuario Rol</string>
    <string name="versuser">Ver Usuarios</string>
    <string name="imglistitemgenero">item de genero</string>
    <string name="title_activity_info_usuario_">Info_usuario_Activity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="llamardaniel">Llamar a Daniel</string>
    <string name="title_activity_maps">Map</string>

</resources>