<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarUsuarioActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline34"
        app:srcCompat="@mipmap/adduser" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".61" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".85" />

    <EditText
        android:id="@+id/edtNombreUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline38"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline36" />

    <EditText
        android:id="@+id/edtPasswordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline39"
        app:layout_constraintEnd_toEndOf="@+id/edtNombreUser"
        app:layout_constraintStart_toStartOf="@+id/edtNombreUser"
        app:layout_constraintTop_toTopOf="@+id/guideline38" />

    <EditText
        android:id="@+id/edtCorreoUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtPasswordUser"
        app:layout_constraintStart_toStartOf="@+id/edtPasswordUser"
        app:layout_constraintTop_toTopOf="@+id/guideline39" />

    <RadioGroup
        android:id="@+id/radiogroupsexo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline43"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline40">

        <RadioButton
            android:id="@+id/radioButtonMasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hombre" />

        <RadioButton
            android:id="@+id/radioButtonFemenino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mujer" />

        <RadioButton
            android:id="@+id/radioButtonDesconocido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cualquiera" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radiogrouproles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline43">

        <RadioButton
            android:id="@+id/radioButtonAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admi" />

        <RadioButton
            android:id="@+id/radioButtonNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/predeterminado" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_agregarUsuario"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/adduser"
        app:layout_constraintBottom_toTopOf="@+id/guideline46"
        app:layout_constraintEnd_toStartOf="@+id/guideline48"
        app:layout_constraintStart_toStartOf="@+id/guideline47"
        app:layout_constraintTop_toTopOf="@+id/guideline45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".7" />

</androidx.constraintlayout.widget.ConstraintLayout>