<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".15" />

        <ImageView
            android:id="@+id/img_listitem_genero"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/genderfluid" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline49"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".6" />

        <TextView
            android:id="@+id/txtlistitem_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eduardo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/guideline49"
            app:layout_constraintEnd_toStartOf="@+id/guideline42"
            app:layout_constraintStart_toStartOf="@+id/guideline41"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.411" />

        <TextView
            android:id="@+id/txtlistitem_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correolist"
            android:textColor="@color/primarylighcolor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline42"
            app:layout_constraintStart_toStartOf="@+id/guideline41"
            app:layout_constraintTop_toTopOf="@+id/guideline49" />

        <TextView
            android:id="@+id/txtlistitem_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@android:color/background_dark"
            app:layout_constraintBottom_toTopOf="@+id/guideline49"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline42"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtlistitem_rol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rol"
            android:textColor="@color/primarylighcolor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline42"
            app:layout_constraintTop_toTopOf="@+id/guideline49" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>